tests/ui/issues/issue-6642.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/issue-6642.rs:5:13
   |
LL |             self.m()
   |             ^^^^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
